fix: URL constructor deprecation warning as of Java 21